# EasyDeploy

./: CMakeLists.txt  README.md  auto_run.sh  build.sh
BasicAlign/: auto_train.sh  evaluate.py  inference.sh  log.txt  maskflownet_train.py  maskflownet_train.sh  maskflownet_v2_train.sh  maskflownet_v3_train.sh  onnx_test.py  onnx_test.sh  pth2onnx.py  pth2onnx.sh  raft_stn_train.sh  raft_train.sh  test_denoise.py  test_stn.py  test_udvd.py  train.py  train_align_denoise.py  train_denoise.py  train_raft.py  train_raftv2.py  train_raftv3.py  train_raftv4.py  train_rawalign.py  train_stn.py  train_udvd.py  train_xaba.py  utils_hzp.py  warp.py  warp.sh  warp_img.py  warp_img.sh
BasicAlign/aligncase_1_rgb/: resize.py
BasicAlign/aligncase_1_rgb/result/: align_diff.py  resize.py
BasicAlign/data/: RAW_dataset.py  __init__.py  datasets.py  davis.py  local_motion.py  noise_davis.py  raw_align_denoise_dataset.py  util.py
BasicAlign/data/preproc/: base.py  bayer.py  noise.py  raw_io.py  read_mipiraw.py
BasicAlign/data/utils/: augmentor.py  utils.py
BasicAlign/data_scripts/: extract_subimages.py
BasicAlign/models/: Align_model.py  Denoise_model.py  MaskFlowNet_model.py  STN_model.py  UDVD_model.py  Xaba.py  __init__.py  align_denoise.py  base_model.py  loss.py  networks.py  rawalign_model.py
BasicAlign/models/archs/: Unet.py  vgg_arch.py
BasicAlign/options/: options.py
BasicAlign/options/IRRPWC/: test_IRRPWC.yml  train_IRRPWC.yml
BasicAlign/options/MaskFlowNet-chairs/: test_MaskFlowNet-chairs.yml  train_MaskFlowNet-chairs.yml
BasicAlign/options/MaskFlowNet-sintel/: test_MaskFlowNet-sintel.yml  train_MaskFlowNet-sintel.yml
BasicAlign/options/MaskFlowNet-things/: test_MaskFlowNet-things.yml  train_MaskFlowNet-things.yml
BasicAlign/options/MaskFlowNet_S/: test_MaskFlowNet_S.yml  train_MaskFlowNet_S.yml
BasicAlign/options/MaskFlowNet_v2-chairs/: test_MaskFlowNet_v2-chairs.yml  train_MaskFlowNet_v2-chairs.yml
BasicAlign/options/MaskFlowNet_v2-sintel/: test_MaskFlowNet_v2-sintel.yml  train_MaskFlowNet_v2-sintel.yml
BasicAlign/options/MaskFlowNet_v2-things/: test_MaskFlowNet_v2-things.yml  train_MaskFlowNet_v2-things.yml
BasicAlign/options/MaskFlowNet_v3-chairs/: test_MaskFlowNet_v3-chairs.yml  train_MaskFlowNet_v3-chairs.yml
BasicAlign/options/PAN/: train_PANx4.yml
BasicAlign/options/PWCNet/: test_PWCNet.yml  train_PWCNet.yml
BasicAlign/options/RAFT-chairs/: test_RAFT-chairs.yml  train_RAFT-chairs.yml
BasicAlign/options/RAFT-hzp/: test_RAFT-hzp.yml  train_RAFT-hzp.yml
BasicAlign/options/RAFT-kitti/: test_RAFT-kitti.yml  train_RAFT-kitti.yml
BasicAlign/options/RAFT-sintel/: test_RAFT-sintel.yml  train_RAFT-sintel.yml
BasicAlign/options/RAFT-things/: test_RAFT-things.yml  train_RAFT-things.yml
BasicAlign/options/RAFT_STN-chairs/: test_RAFT_STN-chairs.yml  train_RAFT_STN-chairs.yml
BasicAlign/options/RAFT_STN-sintel/: test_RAFT_STN-sintel.yml  train_RAFT_STN-sintel.yml
BasicAlign/options/RAFT_STN-things/: test_RAFT_STN-things.yml  train_RAFT_STN-things.yml
BasicAlign/options/RMOF/: test_RMOF.yml  train_RMOF.yml
BasicAlign/options/RMOF_v1/: test_RMOF_v1.yml  train_RMOF_v1.yml
BasicAlign/options/STN/: test_STN.yml  train_STN.yml
BasicAlign/options/STN_Unet/: test_STN_Unet.yml  train_STN_Unet.yml
BasicAlign/options/STN_Unet_v1/: test_STN_Unet_v1.yml  train_STN_Unet_v1.yml
BasicAlign/options/STN_Unet_v2/: test_STN_Unet_v2.yml  train_STN_Unet_v2.yml
BasicAlign/options/STN_Unet_v3/: test_STN_Unet_v3.yml  train_STN_Unet_v3.yml
BasicAlign/options/STN_v1/: test_STN_v1.yml  train_STN_v1.yml
BasicAlign/options/STN_v2/: test_STN_v2.yml  train_STN_v2.yml
BasicAlign/options/STN_v3/: test_STN_v3.yml  train_STN_v3.yml
BasicAlign/options/UDVD/: test_UDVD.yml  train_UDVD.yml
BasicAlign/options/Unet/: test_Unet.yml  train_Unet.yml
BasicAlign/options/pwcplus/: test_pwcplus.yml  train_pwcplus.yml
BasicAlign/options/rawad/: train_rawad.yml  train_rawalignlv3ssim.yml
BasicAlign/options/rawalign/: train_rawalign.yml  train_rawalignlv3.yml  train_rawalignlv3perp.yml
BasicAlign/options/xaba/: test_xaba-chairs.yml  test_xaba-kitti.yml  train_xaba-chairs.yml  train_xaba-kitti.yml
BasicAlign/options/xabaraw/: test_xabaraw-chairs.yml  train_xabaraw-chairs.yml  train_xabaraw-kitti.yml
BasicAlign/options/xabaresd2s/: test_xabaresd2s-chairs.yml  test_xabaresd2s-kitti.yml  train_xabaresd2s-chairs.yml  train_xabaresd2s-kitti.yml
BasicAlign/options/xabav1/: test_xabav1-chairs.yml  test_xabav1-kitti.yml  train_xabav1-chairs.yml
BasicAlign/result/pwcplus_onnx/: auto_run.sh  create_rawdata_forsnpe.py  onnx2dlc.sh
BasicAlign/runs/Aug17_19-42-42_hzp/: events.out.tfevents.1629200562.hzp.17515.0
BasicAlign/runs/Aug17_19-46-55_zjk3-miphone-mialgo-deep022.alicn.idc.xiaomi.com/: events.out.tfevents.1629200815.zjk3-miphone-mialgo-deep022.alicn.idc.xiaomi.com.88130.0
BasicAlign/snpe/: rawdata.txt  run_in_phone.sh  warp.py
BasicAlign/utils/: metrics.py  util.py
assets/segmentation/: segmentation.yaml
assets/squeezenet/: squeezenet.yaml
demo/: seg_demo.cpp  squeezenet_ncnn.cpp  suqeezenet.cpp
image/inc/: post_process.h
image/src/: post_process.cpp
inc/: ed_engine_base.h  infer_engine.h  inference.h
include/: ed_core.h  ed_engine_base.h  inference.h  params.h
infer_engine/MNN/: mnn_class.cpp  mnn_class.h
infer_engine/NCNN/: ncnn_class.cpp  ncnn_class.h
scripts/: align_mv.py  dat_move.py  flowmask.py  img_move.py  isp_move.py  meta_mv.py  mvdata_showflow_showpng.sh  read_deghost.py  run.sh  show_flow.py  show_ideal.py  showflowbackforward_small.py  unzip.sh  zipmv.py
scripts/utils/: copy_result.py  demo.py  get_imglist.py  raw.py  raw_io.py
sdks/: CMakeLists.txt
sdks/draft/: mnist.cpp  segmentation.cpp  squeezenet_mnn.cpp
sdks/mnist/: CMakeLists.txt
sdks/mnist/demo/: mnist.cpp
sdks/segmentation/: CMakeLists.txt
sdks/segmentation/demo/: segmentation.cpp
sdks/squeezenet/: CMakeLists.txt
sdks/squeezenet/demo/: squeezenet.cpp
src/: ed_core.cpp  inference.cpp  mnist_demo.cpp  params.cpp
(+86 files in other folders)
